# cogs

./: CMakeLists.txt  README.md
include/: Condition.h  KeyedData.h  Thread.h
src/: KeyedData.cpp  Thread.cpp
tests/: CMakeLists.txt
